--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kms-elements (6.0.0~0) testing; urgency=medium
+
+  * Prepare for release 6.0
+
+ -- Jose Antonio Santos Cadenas <santoscadenas@gmail.com>  Mon, 09 Feb 2015 13:47:20 +0100
+
 kms-elements (5.1.0) testing; urgency=medium
 
   [ Jose Antonio Santos Cadenas ]
