--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,15 @@
-kms-elements (6.9.1) UNRELEASED; urgency=medium
+kms-elements (6.10.1-0kurento1) UNRELEASED; urgency=medium
 
   * UNRELEASED
 
- -- Juan Navarro <juan.navarro@gmx.es>  Tue, 11 Dec 2018 16:39:45 +0100
+ -- Juan Navarro <juan.navarro@gmx.es>  Tue, 09 Apr 2019 10:47:55 +0200
 
-kms-elements (6.9.0) testing; urgency=medium
+kms-elements (6.10.0-0kurento1) testing; urgency=medium
 
+  * debian: Review for 18.04 build
+  * UNRELEASED
 
- -- Juan Navarro <juan.navarro@gmx.es>  Mon, 10 Dec 2018 17:49:34 +0100
+ -- Juan Navarro <juan.navarro@gmx.es>  Thu, 04 Apr 2019 10:32:31 +0200
 
 kms-elements (6.8.0) testing; urgency=medium
 
